--- a/anons.html
+++ b/anons.html
@@ -22,35 +22,36 @@
     <link rel="stylesheet" href="./assets/scss/style.css">
 </head>
 
-<body class="dark-theme">
+<body>
 
     <div class="wrapper d-flex flex-column justify-content-between">
 
         <!-- Anons -->
         <section class="h-full anons d-flex position-relative">
-            <div class="swp-pagination"></div>
+            <div class="swp-pagination position-absolute top-0 d-flex align-items-center gap-2"></div>
             <div class="swiper h-full">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide d-flex">
                         <div class="container h-full d-flex flex-column justify-content-end">
                             <img class="w-100 mb-4" src="./assets/images/anons-card-1.png" alt="">
+                            <img class="w-100 mb-4 dark-img" src="./assets/images/anons-card-1-dark.png" alt="">
                             <h2 class="mb-4 pt-2">Добро пожаловать</h2>
                             <p class="mb-5">Откройте мир мгновенных криптоплатежей <br> с 4Clever — просто и надёжно</p>
-                            <button class="btn-neutral">Далее</button>
+                            <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral">Далее</button>
                         </div>
                     </div>
                     <div class="swiper-slide d-flex">
                         <div class="container h-full d-flex flex-column justify-content-end">
                             <h2 class="mb-4 pt-2">Принимайте платежи быстро</h2>
                             <p class="mb-5">Принимайте BTC, ETH и другие токены мгновенно ибезопасно прямо в своём магазине</p>
-                            <button class="btn-neutral">Далее</button>
+                            <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral">Далее</button>
                         </div>
                     </div>
                     <div class="swiper-slide d-flex">
                         <div class="container h-full d-flex flex-column justify-content-end">
                             <h2 class="mb-4 pt-2">Быстрая регистрация</h2>
                             <p class="mb-5">Введите данные компании и настройте безопасность, чтобы мгновенно получить API-ключ и&nbsp;начать приём крипты</p>
-                            <a href="#" class="btn-primary">Начать работу</a>
+                            <a href="#" class="w-100 fw-medium d-flex align-items-center justify-content-center btn-primary">Начать работу</a>
                         </div>
                     </div>
                 </div>
