--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <link rel="stylesheet" href="./assets/fonts/HelveticaNeue/stylesheet.css">
     <link rel="stylesheet" href="./assets/fonts/SFProText/stylesheet.css">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Syle CSS -->
@@ -27,7 +26,7 @@
     <div class="wrapper d-flex flex-column justify-content-between">
 
         <!-- Header -->
-        <header class="header">
+        <header class="header pb-4">
             <div class="container">
                 <a href="/" class="header-logo">
                     <img src="./assets/images/logo.svg" alt="">
@@ -40,9 +39,9 @@
         <main class="h-full">
 
             <!-- Home -->
-            <section class="home">
-                <div class="container position-relative">
-                    <h2 class="home-title">Платите криптой мгновенно</h2>
+            <section class="home h-100">
+                <div class="container position-relative h-100">
+                    <h2 class="home-title cursor-pointer">Платите криптой мгновенно</h2>
                     <img src="./assets/images/home-bg-card.png" alt="" class="main-img position-absolute">
                     <img src="./assets/images/home-bg-card-light.png" alt="" class="main-img position-absolute light-img">
                 </div>
@@ -54,8 +53,8 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="container d-flex flex-column">
-                <a href="#" class="btn-primary">Создать аккаунт</a>
-                <a href="#" class="btn-secondary disabled">Войти в аккаунт</a>
+                <a href="#" class="w-100 d-flex align-items-center justify-content-center fw-medium fs-6 lh-sm btn-primary">Создать аккаунт</a>
+                <a href="#" class="w-100 d-flex align-items-center justify-content-center text-center fs-6 btn-secondary">Войти в аккаунт</a>
             </div>
         </footer>
         <!-- Footer end -->
