--- a/UI.html
+++ b/UI.html
@@ -77,13 +77,17 @@
                 <div class="card-body">
                     <h5 class="card-title mb-2">Inputs</h5>
                     <div class="d-flex flex-column row-gap-2">
-                        <input type="text" class="px-4 fs-6 form-inp" placeholder="Email или номер телефона">
+                        <input type="text" class="px-4 fs-6 form-inp" placeholder="Email или номер телефона" inputmode="numeric" pattern="[0-9]*">
                         <div class="position-relative form-tel">
                             <span class="position-absolute gap-2 d-flex align-items-center justify-content-center fs-6">
                                 <img src="../assets/images/flag-ru.svg" alt="">
                                 +7
                             </span>
                             <input type="tel" class="position-relative h-100 start-0 top-0 fs-6" placeholder="(000) 000-00-00" inputmode="numeric" pattern="[0-9]*">
+                        </div>
+                        <div class="form-price position-relative">
+                            <input type="text" placeholder="0" class="position-relative w-100 px-4 fs-6" inputmode="numeric" pattern="[0-9]*">
+                            <p class="px-3 position-absolute position-absolute end-0 top-50 translate-middle-y d-flex align-items-center fs-6">BTC</p>
                         </div>
                     </div>
                 </div>
