--- a/check-result.html
+++ b/check-result.html
@@ -132,10 +132,10 @@
                         <li class="px-3 result-card d-flex flex-column gap-3 w-100">
                             <p class="d-flex align-items-center">
                                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="18" height="18" rx="9" fill="#20C997" />
-                                    <path d="M13.4259 6.51481C13.8017 6.91972 13.778 7.55266 13.3729 7.92831L8.40842 12.5325C8.02491 12.8882 7.43209 12.8882 7.04852 12.5326L4.62704 10.2875C4.22197 9.91192 4.19814 9.27908 4.5738 8.8741L4.77806 8.65391C5.1536 8.24906 5.78622 8.22524 6.19114 8.60072L7.72754 10.0254L11.8091 6.24189C12.2139 5.86661 12.8463 5.89037 13.2218 6.29498L13.4259 6.51481Z" fill="white" />
+                                    <rect width="18" height="18" rx="9" fill="#DC3545" />
+                                    <rect x="4.57324" y="7.5" width="8.85352" height="3" rx="1" fill="white" />
                                 </svg>
-                                <span>Минимальный риск</span>
+                                <span>Высокий риск</span>
                             </p>
                             <div>
                                 <div class="d-flex align-items-center justify-content-between mb-2">
