--- a/UI.html
+++ b/UI.html
@@ -75,6 +75,28 @@
             </div>
             <div class="card">
                 <div class="card-body">
+                    <h5 class="card-title mb-2">link button</h5>
+                    <div class="d-flex flex-column row-gap-2">
+                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn">link-btn</button>
+                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn disabled">link-btn disabled</button>
+                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn md">link-btn md</button>
+                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn sm">link-btn sm</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title mb-2">red button</h5>
+                    <div class="d-flex flex-column row-gap-2">
+                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red">btn-red</button>
+                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red disabled">btn-red disabled</button>
+                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red md">btn-red md</button>
+                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red sm">btn-red sm</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-body">
                     <h5 class="card-title mb-2">Inputs</h5>
                     <div class="d-flex flex-column row-gap-2">
                         <input type="text" class="px-4 fs-6 form-inp" placeholder="Email или номер телефона" inputmode="numeric" pattern="[0-9]*">
