--- a/UI.html
+++ b/UI.html
@@ -24,97 +24,126 @@
 
 <body>
 
-    <div class="wrapper">
+    <div class="wrapper py-3">
 
         <!-- UI kits -->
-        <div class="container d-flex flex-column row-gap-3">
-            <!-- Btns -->
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title mb-2">primary button</h5>
-                    <div class="d-flex flex-column row-gap-2">
-                        <button class="w-100 d-flex align-items-center justify-content-center btn-primary">btn-primary</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center btn-primary disabled">btn-primary disabled</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center btn-primary md">btn-primary md</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center btn-primary sm">btn-primary sm</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title mb-2">secondary button</h5>
-                    <div class="d-flex flex-column row-gap-2">
-                        <button class="w-100 d-flex align-items-center justify-content-center text-center btn-secondary">btn-secondary</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center text-center btn-secondary disabled">btn-secondary disabled</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center text-center btn-secondary md">btn-secondary md</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center text-center btn-secondary sm">btn-secondary sm</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title mb-2">space button</h5>
-                    <div class="d-flex flex-column row-gap-2">
-                        <button class="w-100 d-flex align-items-center justify-content-center gap-3 btn-space">btn-space</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center gap-3 btn-space disabled">btn-space disabled</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center gap-3 btn-space md">btn-space md</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center gap-3 btn-space sm">btn-space sm</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title mb-2">neutral button</h5>
-                    <div class="d-flex flex-column row-gap-2">
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral">btn-neutral</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral disabled">btn-neutral disabled</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral md">btn-neutral md</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral sm">btn-neutral sm</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title mb-2">link button</h5>
-                    <div class="d-flex flex-column row-gap-2">
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn">link-btn</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn disabled">link-btn disabled</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn md">link-btn md</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn sm">link-btn sm</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title mb-2">red button</h5>
-                    <div class="d-flex flex-column row-gap-2">
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red">btn-red</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red disabled">btn-red disabled</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red md">btn-red md</button>
-                        <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red sm">btn-red sm</button>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title mb-2">Inputs</h5>
-                    <div class="d-flex flex-column row-gap-2">
-                        <input type="text" class="px-4 fs-6 form-inp" placeholder="Email или номер телефона" inputmode="numeric" pattern="[0-9]*">
-                        <div class="position-relative form-tel">
-                            <span class="position-absolute gap-2 d-flex align-items-center justify-content-center fs-6">
-                                <img src="../assets/images/flag-ru.svg" alt="">
-                                +7
-                            </span>
-                            <input type="tel" class="position-relative h-100 start-0 top-0 fs-6" placeholder="(000) 000-00-00" inputmode="numeric" pattern="[0-9]*">
-                        </div>
-                        <div class="form-price position-relative">
-                            <input type="text" placeholder="0" class="position-relative w-100 px-4 fs-6" inputmode="numeric" pattern="[0-9]*">
-                            <p class="px-3 position-absolute position-absolute end-0 top-50 translate-middle-y d-flex align-items-center fs-6">BTC</p>
+        <div style="max-width: 1920px; margin: 0 auto;">
+            <div class="container">
+                <div class="row g-3">
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title mb-2">primary button</h5>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <button class="w-100 d-flex align-items-center justify-content-center btn-primary">btn-primary</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center btn-primary disabled">btn-primary disabled</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center btn-primary md">btn-primary md</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center btn-primary sm">btn-primary sm</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title mb-2">secondary button</h5>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <button class="w-100 d-flex align-items-center justify-content-center text-center btn-secondary">btn-secondary</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center text-center btn-secondary disabled">btn-secondary disabled</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center text-center btn-secondary md">btn-secondary md</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center text-center btn-secondary sm">btn-secondary sm</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title mb-2">space button</h5>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <button class="w-100 d-flex align-items-center justify-content-center gap-3 btn-space">btn-space</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center gap-3 btn-space disabled">btn-space disabled</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center gap-3 btn-space md">btn-space md</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center gap-3 btn-space sm">btn-space sm</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title mb-2">neutral button</h5>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral">btn-neutral</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral disabled">btn-neutral disabled</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral md">btn-neutral md</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-neutral sm">btn-neutral sm</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title mb-2">link button</h5>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn">link-btn</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn disabled">link-btn disabled</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn md">link-btn md</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium link-btn sm">link-btn sm</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title mb-2">red button</h5>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red">btn-red</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red disabled">btn-red disabled</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red md">btn-red md</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-red sm">btn-red sm</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title mb-2">linear button</h5>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-linear">btn-linear</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-linear disabled">btn-linear disabled</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-linear md">btn-linear md</button>
+                                    <button class="w-100 d-flex align-items-center justify-content-center fw-medium btn-linear sm">btn-linear sm</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title mb-2">Inputs</h5>
+                                <div class="d-flex flex-column row-gap-2">
+                                    <input type="text" class="px-4 fs-6 form-inp" placeholder="Email или номер телефона" inputmode="numeric" pattern="[0-9]*">
+                                    <div class="position-relative form-tel">
+                                        <span class="position-absolute gap-2 d-flex align-items-center justify-content-center fs-6">
+                                            <img src="../assets/images/flag-ru.svg" alt="">
+                                            +7
+                                        </span>
+                                        <input type="tel" class="position-relative h-100 start-0 top-0 fs-6" placeholder="(000) 000-00-00" inputmode="numeric" pattern="[0-9]*">
+                                    </div>
+                                    <div class="form-price position-relative">
+                                        <input type="text" placeholder="0" class="position-relative w-100 px-4 fs-6" inputmode="numeric" pattern="[0-9]*">
+                                        <p class="px-3 position-absolute position-absolute end-0 top-50 translate-middle-y d-flex align-items-center fs-6">BTC</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <!-- Btns end -->
         </div>
         <!-- UI kits end -->
 
