fixed store-settings page

--- a/store-settings.html
+++ b/store-settings.html
@@ -34,7 +34,7 @@
                         <img src="./assets/images/times-dark.svg" alt="" class="dark-img">
                     </a>
                 </div>
-                <h2 class="fw-medium fs-6 text-center">Основные настройки</h2>
+                <h2 class="fw-medium fs-6 text-center">Настройки магазина</h2>
                 <div class="header-right d-flex align-items-center justify-content-center"></div>
             </div>
         </header>
