fixed sites-list page

--- a/sites-list.html
+++ b/sites-list.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./assets/scss/style.css">
 </head>
 
-<body class="dark-theme">
+<body>
 
     <div class="wrapper">
 
